# fiducia-memory.rs

./: .cli-flags.toml  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md
.cargo/: README.md  audit.toml
.github/: README.md
.github/workflows/: README.md  ci.yml
docs/: README.md  sqlx-to-seaorm-migration.md
migrations/: 0001_memory.sql  0003_rls_force.sql  README.md
scripts/: README.md
sql/: README.md  fiducia_memory.sql  recall.sql
src/: README.md  api.rs  auth.rs  claims.rs  db.rs  domain.rs  fusion.rs  lib.rs  main.rs  memory.rs  model.rs  postgres.rs  recall.rs  service.rs  store.rs  vector.rs
src/durable/: README.md  api.rs  mod.rs  model.rs  store.rs
tests/: README.md  auth_middleware.rs
