# Cargo manifest for fiducia-memory — the shared brain (library + API binary).
# A Postgres + pgvector memory service: durable, contestable, provenance-tracked
# organizational knowledge for AI agents. Coordination/authority stays in
# fiducia-node; this service holds probabilistic, searchable knowledge.
[package]
name = "fiducia-memory"
version = "0.1.0"
edition = "2021"
description = "The Fiducia shared brain: durable agent memory, a contestable claim ledger, and hybrid recall"
license = "MIT"

[dependencies]
# Epistemic layer (mine): async MemoryStore trait.
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Durable storage floor: pgvector values are validated and bound as text before
# an explicit PostgreSQL `::vector` cast, keeping persistence on SeaORM.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
# `full` (codex) is a superset of the previously-used tokio feature set.
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid"] }
# Durable service middleware (codex): body limit, timeout, tracing.
tower-http = { version = "0.7", features = ["trace", "request-id", "timeout", "limit", "catch-panic"] }
tracing = "0.1"
# Shared OpenTelemetry + tracing setup (one init() for all services).
fiducia-telemetry = { git = "https://github.com/fiducia-cloud/fiducia-telemetry.rs", tag = "v0.2.1" }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
